# propertiesIU

./: .gitignore  README.md  pyproject.toml
src/properties/: .test.py.swp  __init__.py  classes.py  utils.py
