[project]
name = "properties"
version = "0.1.0"
description = ""
authors = [
    {name = "tfoerst3r",email = "32761865+tfoerst3r@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "<3.14,>=3.11"
dependencies = [
    "ruamel-yaml-clib (>=0.2.14,<0.3.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "cantera (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "properties", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
